<resources>
    <string name="app_name">Puzzle_15</string>
    <string name="start_game">Start Game</string>
    <string name="steps">Steps:</string>
    <string name="shuffle">Shuffle</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="time">Time: 00:00:00</string>
    <string name="string">string</string>
    <string name="records">Records</string>
    <string name="puzzle_15">PUZZLE 15</string>
    <string name="records_tv">RECORDS</string>
    <string name="record1">record1</string>
    <string name="time_record">Time:</string>
    <string name="steps_record">Steps:</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">Start</string>
    <string name="night_mode">Night mode</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="clear_all_data">Clear all data</string>
</resources>